--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  google_fonts: ^6.1.0
+  http: ^0.13.6
+  pbp_django_auth: ^0.3.1
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
