--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   pbp_django_auth: ^0.3.1
   provider: ^6.1.1
   carousel_slider: ^4.2.1
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
